# aiseo-ai-backend

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: Dockerfile  healthcheck.sh
scripts/: example_request.sh  run_tests.sh  start_dev.sh
src/: __init__.py  logging_config.py  main.py  settings.py
src/api/: __init__.py  deps.py
src/api/routers/: health.py  jobs.py
src/api/schemas/: __init__.py  requests.py  responses.py
src/application/orchestration/: __init__.py  checkpointer.py  graph_builder.py  state.py
src/application/services/: keyword_candidates.py  keyword_tools.py  scoring.py  (+3 more)
src/domain/: errors.py
tests/: conftest.py
tests/e2e/: conftest.py  test_api_deferred_run.py  test_api_job_flow.py  test_api_result_not_ready.py
tests/integration/: fakes.py  test_graph_fail_when_revisions_exhausted.py  test_graph_happy_path.py  test_graph_revision_loop.py
tests/unit/: test_build_outline_node.py  test_checkpointer_wiring.py  test_collect_serp_node.py  test_extract_themes_node.py  test_fail_job_node.py  test_finalize_node.py  test_graph_builder.py  test_graph_state.py  test_json_mode.py  test_keyword_candidates.py  test_keyword_plan_node.py  test_keyword_tools.py  test_markdown_tools.py  test_mock_serp.py  test_openai_provider_contracts.py  test_planner_node.py  test_repair_spec_builder.py  test_repair_spec_node.py  test_revise_targeted_node.py  test_seo_packager_node.py  test_seo_validators.py  test_serp_provider_factory.py  test_validate_and_score_node.py  test_write_article_node.py
(+47 files in other folders)
