[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seo-agentic-backend"
version = "0.1.0"
description = "SERP-grounded SEO article generator with LangGraph plan-execute-verify-repair loop"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.0",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "langgraph>=1.0.9",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-core>=1.2.15",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
